--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  height: 100%;
 }
 
 button, input, select, textarea {
